--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,11 @@ html
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		script(src='/js/lib/jquery-1.11.2.min.js')
+		script(src='/js/lib/bootstrap.min.js')
+
 	body
 		include partials/navbar
+		include partials/flash
 		block content
 		include partials/footer
