--- a/views/partials/flash.jade
+++ b/views/partials/flash.jade
@@ -1,18 +1,20 @@
 if messages.errors
 	.alert.alert-danger.fade.in
-		button.close(type='button', data-dismiss='alert')
-			span.ion-close-circled
+		button.close(type='button', data-dismiss='alert', aria-label='Close')
+			span(aria-hidden="true") &times;
 		for error in messages.errors
 			div= error.msg
 if messages.info
 	.alert.alert-info.fade.in
-		button.close(type='button', data-dismiss='alert')
+		button.close(type='button', data-dismiss='alert', aria-label='Close')
+			span(aria-hidden="true") &times;
 			span.ion-close-circled
 		for info in messages.info
 			div= info.msg
 if messages.success
 	.alert.alert-success.fade.in
-		button.close(type='button', data-dismiss='alert')
+		button.close(type='button', data-dismiss='alert', aria-label='Close')
+			span(aria-hidden="true") &times;
 			span.ion-close-circled
 		for success in messages.success
 			div= success.msg
