--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title= title
+		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		script(src='/js/lib/jquery-1.11.2.min.js')
 		script(src='/js/lib/bootstrap.min.js')
