--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -3,6 +3,4 @@ footer
 		p.pull-left © 2014 Sites. All Rights Reserved
 		ul.pull-right.list-inline
 			li
-				a(href='/fun.html') Fun
-			li
-				a(href='/other.html') Other
+				a(href='/') Index
