--- a/views/site.jade
+++ b/views/site.jade
@@ -2,6 +2,8 @@ extends layout
 
 block content
 	.container
+		h2 #{metadata.title}  <br> #[small #{metadata.summary} ]
+
 		div!= markdown
 	.container
-		div!= metadata
+		script!= metadata
