site looks way better now.

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,25 @@
-
-body
-  padding: 10px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
-  color: #00B7FF
+  color: #23527c
+
+.blog-post
+  padding: 10px
+.blog-post h2 small
+  font-size: 50%
+.blog-post blockquote
+  font-size: 14px
+  background: #eeeeee
+.blog-date
+  font-size: 14px
+  font-color: #eeeeee
+.blog-date h2
+  padding-top: 0px
+  margin-top: 0px
+.brand-fix
+  height: 90px
+  padding: 0px
+.navbar-fix
+  background-color: white
+  border: none
+.dropdown-menu-fix li a
+  font-size: 12px
+  padding: 0px 0px 0px 10px
