adding blog content up through sep 2013

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,11 @@
 a
   color: #23527c
-
+h1, h2, h3, h4, h5, h6
+  color: #23527c
+blockquote
+  font-size: 14px
+footer
+  color: #888888
 .blog-post
   padding: 10px
 .blog-post h2 small
@@ -10,8 +15,8 @@ a
   background: #eeeeee
 .blog-date
   font-size: 14px
-  font-color: #eeeeee
-.blog-date h2
+  color: #888888
+.blog-post h2
   padding-top: 0px
   margin-top: 0px
 .brand-fix
