--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,20 @@
 a {
   color: #23527c;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #23527c;
+}
+blockquote {
+  font-size: 14px;
+}
+footer {
+  color: #888;
+}
 .blog-post {
   padding: 10px;
 }
@@ -13,9 +27,9 @@ a {
 }
 .blog-date {
   font-size: 14px;
-  font-color: #eee;
+  color: #888;
 }
-.blog-date h2 {
+.blog-post h2 {
   padding-top: 0px;
   margin-top: 0px;
 }
