--- a/views/index.jade
+++ b/views/index.jade
@@ -8,4 +8,9 @@ block content
 				h2
 					a(href='#{post.link}') #{post.metadata.title} <br> #[small #{post.metadata.summary}]
 				div!=post.content
+				.post-footer
+					.post-categories.btn-group.btn-group-xs: each cat in post.metadata.categories
+						a(href='/category/#{cat}').btn.btn-default #{cat}
+					.post-tags.btn-group.btn-group-xs: each tag in post.metadata.tags
+						a(href='/tag/#{tag}').btn.btn-default #{tag}
 				hr
