--- a/views/site.jade
+++ b/views/site.jade
@@ -5,5 +5,10 @@ block content
 		h2 #{metadata.title}  <br> #[small #{metadata.summary} ]
 
 		div!= markdown
+		.post-footer
+			.post-categories.btn-group.btn-group-xs: each cat in metadata.categories
+				a(href='/category/#{cat}').btn.btn-default #{cat}
+			.post-tags.btn-group.btn-group-xs: each tag in metadata.tags
+				a(href='/tag/#{tag}').btn.btn-default #{tag}
 	.container
 		script!= metadata
