--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -19,6 +19,8 @@ footer
 .blog-post h2
   padding-top: 0px
   margin-top: 0px
+.cat-tag-label
+  border: none
 .brand-fix
   height: 90px
   padding: 0px
