--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,6 +1,7 @@
 footer
 	.container.text-center
-		p.pull-left © 2014 Sites. All Rights Reserved
+		p.pull-left © 2014 All Rights Reserved
 		ul.pull-right.list-inline
 			li
-				a(href='/') Index
+				a.navbar-brand.brand-fix(href='/')
+					img( src='/img/robot.png')
