--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,14 @@ block content
 					a(href='#{post.link}') #{post.metadata.title} <br> #[small #{post.metadata.summary}]
 				div!=post.content
 				.post-footer
-					.post-categories.btn-group.btn-group-xs: each cat in post.metadata.categories
-						a(href='/category/#{cat}').btn.btn-default #{cat}
-					.post-tags.btn-group.btn-group-xs: each tag in post.metadata.tags
-						a(href='/tag/#{tag}').btn.btn-default #{tag}
+					if post.metadata.categories.length > 0
+						.post-categories.btn-group.btn-group-xs
+							.btn.btn-default.cat-tag-label categories
+							each cat in post.metadata.categories
+								a(href='/category/#{cat}').btn.btn-default #{cat}
+					if post.metadata.tags.length > 0
+						.post-tags.btn-group.btn-group-xs
+							.btn.btn-default.cat-tag-label tags
+							each tag in post.metadata.tags
+								a(href='/tag/#{tag}').btn.btn-default #{tag}
 				hr
