--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,13 +1,31 @@
+body
+  color: #33333d
+  height: 100%
+  font-size: 17px
+  font-weight: 300
+  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif
 a
-  color: #23527c
+  color: #33333d
+a:hover
+  text-decoration: none
 h1, h2, h3, h4, h5, h6
-  color: #23527c
+  color: #33333d
+p
+  font-weight: 300
+  line-height: 1.5em
 blockquote
   font-size: 14px
 footer
   color: #888888
+section
+  min-height: 50%
+  padding: 75px 100px
+section:nth-child(2n)
+  background: #fdfdfd
+  box-shadow: inset 0 2px 0 0 white
 .blog-post
   padding: 10px
+  max-width: 750px
 .blog-post h2 small
   font-size: 50%
 .blog-post blockquote
@@ -24,6 +42,9 @@ footer
 .brand-fix
   height: 90px
   padding: 0px
+.logo
+  font: 45px 'Italiana', sans-serif
+  margin: 0px
 .navbar-fix
   background-color: white
   border: none
