--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -51,3 +51,13 @@ section:nth-child(2n)
 .dropdown-menu-fix li a
   font-size: 12px
   padding: 0px 0px 0px 10px
+@media screen and (max-width: 700px)
+  section
+    padding: 25px 25px
+  .logo
+    font-size: 25px
+@media screen and (max-width: 500px)
+  body
+    font-size: 13px
+  .logo
+    display: none
