--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,8 @@ html
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title= title
 		link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Italiana&amp;subset=latin')
-		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/css/style.css')
 		script(src='/js/lib/jquery-1.11.2.min.js')
 		script(src='/js/lib/bootstrap.min.js')
 
