added rss and atom feeds and a few pages

--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -3,5 +3,9 @@ footer
 		p.pull-left © 2014 All Rights Reserved
 		ul.pull-right.list-inline
 			li
+				a(href='/feed/') rss
+			li
+				a(href='/feed/atom/') atom
+			li
 				a.navbar-brand.brand-fix(href='/')
 					img( src='/img/robot.png')
