--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -9,3 +9,41 @@ footer
 			li
 				a.navbar-brand.brand-fix(href='/')
 					img( src='/img/robot.png')
+
+script.
+
+	var trackID, domainID;
+
+	trackID = 'UA-1512104-1'; //eg: 'UA-34398778-4'.
+
+	domainID = 'trickykegstands.com'; //eg: 'studio7designs.com'.
+
+	(function (i, s, o, g, r, a, m) {
+
+		i['GoogleAnalyticsObject'] = r;
+
+		i[r] = i[r] || function () {
+
+			(i[r].q = i[r].q || []).push(arguments);
+
+		},
+
+		i[r].l = 1 * new Date();
+
+		a = s.createElement(o),
+
+		m = s.getElementsByTagName(o)[0];
+
+		a.async = 1;
+
+		a.defer = 1;
+
+		a.src = g;
+
+		m.parentNode.insertBefore(a,m)
+
+	})(window, document, 'script','//www.google-analytics.com/analytics.js', 'ga');
+
+	ga('create', trackID, domainID);
+
+	ga('send', 'pageview');
