--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,8 @@ html
 		link(rel='stylesheet', href='/css/style.css')
 		script(src='/js/lib/jquery-1.11.2.min.js')
 		script(src='/js/lib/bootstrap.min.js')
-		script(src='/js/poll.js')
-
-	body(ng-controller='PollListCtrl')
-		div(ng-view)
+	body
+		include partials/navbar
+		include partials/flash
+		block content
+		include partials/footer
