--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -16,10 +16,11 @@ p
 blockquote
   font-size: 14px
 footer
+  padding-top: 10px
   color: #888888
 section
   min-height: 50%
-  padding: 75px 100px
+  padding: 5px 100px
 section:nth-child(2n)
   background: #fdfdfd
   box-shadow: inset 0 2px 0 0 white
