--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,6 +1,6 @@
 footer
 	.container.text-center
-		p.pull-left © 2014 All Rights Reserved
+		p.pull-left © 2014-2015 Jordan Woerndle. All Rights Reserved
 		ul.pull-right.list-inline
 			li
 				a(href='/feed/') rss
