--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -8,7 +8,23 @@
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand.brand-fix(href='/')
-							img( src='/img/robot.png')
+							| <svg width="100%" height="100%" viewBox="0 0 36 32" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+							| <g>
+							| <title>ROBOT</title>
+							| <rect fill="#000000" fill-opacity="0" x="10.99085" y="0.63564" width="14.5" height="10.7" id="svg_1" rx="1" ry="1" stroke="#000000"/>
+							| <rect fill="#000000" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x="0.59085" y="12.43564" width="15.1" height="7.2" id="svg_2" rx="1" ry="1" stroke="#000000"/>
+							| <rect fill="#000000" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x="20.39085" y="12.43564" width="15.1" height="7.2" rx="1" ry="1" id="svg_4" stroke="#000000"/>
+							| <rect fill="#000000" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x="5.89085" y="21.03564" width="11.5" height="8.9" rx="1" ry="1" id="svg_5" stroke="#000000"/>
+							| <rect fill="#000000" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x="18.89085" y="20.93564" width="11.5" height="8.9" rx="1" ry="1" stroke="#000000" id="svg_6"/>
+							| <ellipse fill="#000000" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" cx="15.49085" cy="3.93564" id="svg_7" rx="0.5" ry="0.5"/>
+							| <ellipse fill="#000000" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" cx="20.69085" cy="3.93564" rx="0.5" ry="0.5" id="svg_8"/>
+							| <line fill="none" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x1="13.99085" y1="8.33564" x2="22.49085" y2="8.33564" id="svg_10" transform="rotate(-1 18.240903854370018,8.3356399536133) "/>
+							| <ellipse fill="#000000" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" cx="9.19085" cy="28.93564" id="svg_12" rx="0.2" ry="0.3"/>
+							| <ellipse fill="#000000" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" cx="13.99085" cy="29.03564" rx="0.2" ry="0.3" id="svg_13"/>
+							| <ellipse fill="#000000" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" cx="22.39085" cy="29.03564" rx="0.2" ry="0.3" id="svg_14"/>
+							| <ellipse fill="#000000" stroke="#000000" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" cx="26.99085" cy="29.03564" rx="0.2" ry="0.3" id="svg_15"/>
+							| </g>
+							| </svg>
 					.navbar-collapse.collapse.navbar-right
 						ul.nav.navbar-nav: each cat in pageCategories
 							li.dropdown(role="presentation")
