--- a/views/index.jade
+++ b/views/index.jade
@@ -19,6 +19,25 @@ block content
 		section
 			p
 				a(href='/blog/') the blog »
+					| <svg width="40" height="40" viewBox="0 0 250 250" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+					|	<!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+					|	<defs>
+					|	<linearGradient id="svg_3" x2="0.88153" y2="0.89844" x1="0.22137" y1="0.19141">
+					|		<stop stop-color="#003df7" stop-opacity="0.99609" offset="0"/>
+					|		<stop stop-color="#002868" stop-opacity="0.99219" offset="1"/>
+					|	</linearGradient>
+					|	<linearGradient id="svg_16" x2="0.88153" y2="0.89844" x1="0.22137" y1="0.19141">
+					|		<stop stop-color="#003df7" stop-opacity="0.99609" offset="0"/>
+					|		<stop stop-color="#002868" stop-opacity="0.99219" offset="1"/>
+					|	</linearGradient>
+					|	</defs>
+					|	<g>
+					|	<title>BLOG</title>
+					|	<rect fill="url(#svg_3)" stroke-width="0" width="250" height="250" id="svg_9" stroke-opacity="0" rx="20" ry="20" stroke="#000000"/>
+					|	<circle fill="#000000" fill-opacity="0" cx="124" cy="124" r="118" id="svg_11" stroke-width="3" stroke="#ffffff"/>
+					|	<text stroke="#ffffff" transform="matrix(9.793298904023029,0,0,10.69868027036522,-1096.6623649491244,-1129.7602070914293) " fill="#ffffff" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="125" y="125" id="svg_17" font-size="24" font-family="Sans-serif" text-anchor="middle" xml:space="preserve" font-weight="lighter">B</text>
+					|	</g>
+					| </svg>
 		section
 			p
 			p
