added eurion constellation svg

--- a/views/index.jade
+++ b/views/index.jade
@@ -40,5 +40,10 @@ block content
 					| </svg>
 		section
 			p
-			p
-			p
+				| <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="80" height="80" viewBox="0 0 550 550"style="fill:#FFF;stroke:#FFFF91;stroke-width:15">
+				| <circle r="25" cx="269" cy="73" />
+				| <circle r="25" cx="85" cy="170" />
+				| <circle r="25" cx="237" cy="228" />
+				| <circle r="25" cx="475" cy="280" />
+				| <circle r="25" cx="263" cy="487" />
+				| </svg>
