--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,19 @@ block content
 			p
 				a(href='/blog/') the blog »
 		section
-			p
+			ul.findme
+				li.findme: a(href='https://github.com/jordan52/' alt='GitHub')
+					span.fa-stack.fa-lg
+						i.fa.fa-square-o.fa-stack-2x
+						i.fa.fa-github.fa-stack-1x
+				li.findme: a(href='https://bitbucket.com/jordan52/' alt='Bitbucket')
+					span.fa-stack.fa-lg
+						i.fa.fa-square-o.fa-stack-2x
+						i.fa.fa-bitbucket.fa-stack-1x
+				li.findme: a(href='https://twitter.com/trickykegstands/' alt='Twitter')
+					span.fa-stack.fa-lg
+						i.fa.fa-square-o.fa-stack-2x
+						i.fa.fa-twitter.fa-stack-1x
 			p
 			p
 			p
