--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -45,7 +45,7 @@ section:nth-child(2n)
   height: 90px
   padding: 0px
 .logo
-  font: 45px 'Italiana', sans-serif
+  font: 45px 'Open Sans', sans-serif
   margin: 0px
 .navbar-fix
   background-color: white
@@ -53,6 +53,13 @@ section:nth-child(2n)
 .dropdown-menu-fix li a
   font-size: 12px
   padding: 0px 0px 0px 10px
+.findme
+  margin: 0
+  padding: 0
+.findme ul
+  list-style-type: none
+.findme li
+  display: inline
 @media screen and (max-width: 700px)
   section
     padding: 25px 25px
