fixing up index page

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -42,7 +42,6 @@ section:nth-child(2n)
 .cat-tag-label
   border: none
 .brand-fix
-  height: 90px
   padding: 0px
 .logo
   font: 45px 'Open Sans', sans-serif
@@ -60,6 +59,17 @@ section:nth-child(2n)
   list-style-type: none
 .findme li
   display: inline
+.index-choices
+  background: rgb(245, 247, 249)
+  border: 1px solid #e9eaec
+  height: 200px
+  padding-top: 30px
+  margin-top: 30px
+.index-choices h2
+  margin-bottom: 11px
+
+  font-weight: 400
+  color: #292e31
 @media screen and (max-width: 700px)
   section
     padding: 25px 25px
