--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,7 +62,6 @@ section:nth-child(2n) {
   border: none;
 }
 .brand-fix {
-  height: 90px;
   padding: 0px;
 }
 .logo {
@@ -86,6 +85,18 @@ section:nth-child(2n) {
 }
 .findme li {
   display: inline;
+}
+.index-choices {
+  background: #f5f7f9;
+  border: 1px solid #e9eaec;
+  height: 200px;
+  padding-top: 30px;
+  margin-top: 30px;
+}
+.index-choices h2 {
+  margin-bottom: 11px;
+  font-weight: 400;
+  color: #292e31;
 }
 @media screen and (max-width: 700px) {
   section {
