--- a/views/index.jade
+++ b/views/index.jade
@@ -1,39 +1,46 @@
 extends layout
 
 block content
-	.container
-		section
-			h2  I'm Jordan. I do things.
-			p.
-				I don't want to sell you an e-book. I don't want you to subscribe to my newsletter and I don't want to
-				teach you how to go from zero to 10,000 viewers in 30 days. However, I do want share my ideas for doing
-				good work, building interesting things, and generally succeeding in this thing we call life.
-			p.
-				I am a dad, an entrepreneur, a software engineer, and a wanna be writer. I spend most of my time
-				teaching, coding, writing music, and pulling myself through projects I probably had no business trying. In
-				fact, I do a whole lot of things and I make a lot of mistakes along the way. This site exists
-				to teach you some tricks that will help you get good at doing whatever it is you want to do.
-		section
-			p
-				a(href='about.html') a little more about me »
-		section
-			p
-				a(href='/blog/') the blog »
-		section
-			ul.findme
-				li.findme: a(href='https://github.com/jordan52/' alt='GitHub')
-					span.fa-stack.fa-lg
-						i.fa.fa-square-o.fa-stack-2x
-						i.fa.fa-github.fa-stack-1x
-				li.findme: a(href='https://bitbucket.com/jordan52/' alt='Bitbucket')
-					span.fa-stack.fa-lg
-						i.fa.fa-square-o.fa-stack-2x
-						i.fa.fa-bitbucket.fa-stack-1x
-				li.findme: a(href='https://twitter.com/trickykegstands/' alt='Twitter')
-					span.fa-stack.fa-lg
-						i.fa.fa-square-o.fa-stack-2x
-						i.fa.fa-twitter.fa-stack-1x
-			p
-			p
-			p
+	.container-fluid
+		.row
+			section
+				ul.findme.pull-right
+					li.findme: a(href='https://github.com/jordan52/' alt='GitHub')
+						span.fa-stack.fa-lg
+							i.fa.fa-square-o.fa-stack-2x
+							i.fa.fa-github.fa-stack-1x
+					li.findme: a(href='https://bitbucket.com/jordan52/' alt='Bitbucket')
+						span.fa-stack.fa-lg
+							i.fa.fa-square-o.fa-stack-2x
+							i.fa.fa-bitbucket.fa-stack-1x
+					li.findme: a(href='https://twitter.com/trickykegstands/' alt='Twitter')
+						span.fa-stack.fa-lg
+							i.fa.fa-square-o.fa-stack-2x
+							i.fa.fa-twitter.fa-stack-1x
+			section
+				h2  I'm Jordan. I do things.
+				p.
+					I don't want to sell you an e-book. I don't want you to subscribe to my newsletter and I don't want to
+					teach you how to go from zero to 10,000 viewers in 30 days. However, I do want share my ideas for doing
+					good work, building interesting things, and generally succeeding in this thing we call life.
+				p.
+					I am a dad, an entrepreneur, a software engineer, and a wanna be writer. I spend most of my time
+					teaching, coding, writing music, and pulling myself through projects I probably had no business trying. In
+					fact, I do a whole lot of things and I make a lot of mistakes along the way. I'm hoping this site can
+					to teach you some tricks that will help you get good at the things you want to do.
+		.row
+			section.index-choices
+				.col-md-6
+					.text-center
+						span.fa-stack.fa-lg
+							i.fa.fa-rocket.fa-stack-2x
+					h2.text-center
+						a(href='about.html') about
+				.col-md-6
+					.text-center
+						span.fa-stack.fa-lg
+							i.fa.fa-asterisk.fa-stack-2x
+					h2.text-center
+						a(href='/blog/') blog
+
 
