--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -8,7 +8,7 @@
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand.brand-fix(href='/')
-							| <svg width="100%" height="100%" viewBox="0 0 36 32" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+							| <svg width="60" height="60" viewBox="0 0 36 32" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 							| <g>
 							| <title>ROBOT</title>
 							| <rect fill="#000000" fill-opacity="0" x="10.99085" y="0.63564" width="14.5" height="10.7" id="svg_1" rx="1" ry="1" stroke="#000000"/>
