--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,7 +89,7 @@ section:nth-child(2n) {
 .index-choices {
   background: #f5f7f9;
   border: 1px solid #e9eaec;
-  height: 200px;
+  min-height: 200px;
   padding-top: 30px;
   margin-top: 30px;
 }
