--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -62,7 +62,7 @@ section:nth-child(2n)
 .index-choices
   background: rgb(245, 247, 249)
   border: 1px solid #e9eaec
-  height: 200px
+  min-height: 200px
   padding-top: 30px
   margin-top: 30px
 .index-choices h2
