moved stars added the domain name thing

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,26 +20,23 @@ block content
 			section
 				h2  I'm Jordan. I do things.
 				p.
-					I don't want to sell you an e-book. I don't want you to subscribe to my newsletter and I don't want to
-					teach you how to go from zero to 10,000 viewers in 30 days. However, I do want share my ideas for doing
-					good work, building interesting things, and generally succeeding in this thing we call life.
-				p.
 					I am a dad, an entrepreneur, a software engineer, and a wanna be writer. I spend most of my time
-					teaching, coding, writing music, and pulling myself through projects I probably had no business trying. In
-					fact, I do a whole lot of things and I make a lot of mistakes along the way. I'm hoping this site can
-					to teach you some tricks that will help you get good at the things you want to do.
+					teaching, coding, writing music, and pulling myself through projects I probably had no business
+					trying in the first place. This is my website.
 		.row
 			section.index-choices
 				.col-md-6
 					.text-center
 						span.fa-stack.fa-lg
-							i.fa.fa-rocket.fa-stack-2x
+							a(href='about.html')
+								i.fa.fa-rocket.fa-stack-2x
 					h2.text-center
 						a(href='about.html') about
 				.col-md-6
 					.text-center
 						span.fa-stack.fa-lg
-							i.fa.fa-asterisk.fa-stack-2x
+							a(href='/blog/')
+								i.fa.fa-asterisk.fa-stack-2x
 					h2.text-center
 						a(href='/blog/') blog
 
